Prime Factor Controller, View Model, and View

--- a/SoftwareTest/SoftwareTest.csproj
+++ b/SoftwareTest/SoftwareTest.csproj
@@ -116,6 +116,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LinkedListController.cs" />
+    <Compile Include="Controllers\PrimeFactorController.cs" />
     <Compile Include="Controllers\TriangleController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -123,8 +124,10 @@
     <Compile Include="Helpers\LinkedList.cs" />
     <Compile Include="Helpers\LinkedListHelper.cs" />
     <Compile Include="Helpers\Node.cs" />
+    <Compile Include="Helpers\PrimeFactorHelper.cs" />
     <Compile Include="Helpers\TriangleHelper.cs" />
-    <Compile Include="Models\ViewModels\LinkedListViewModel.cs" />
+    <Compile Include="Models\ViewModels\LinkedListFormViewModel.cs" />
+    <Compile Include="Models\ViewModels\PrimeFactorFormViewModel.cs" />
     <Compile Include="Models\ViewModels\TriangleFormViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -177,9 +180,11 @@
     <Content Include="Views\Shared\DisplayTemplates\SimpleMessage.cshtml" />
     <Content Include="Views\Shared\DisplayTemplates\MessageBase.cshtml" />
     <Content Include="Views\LinkedList\Index.cshtml" />
+    <Content Include="Views\PrimeFactor\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Files\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
