--- a/SoftwareTest.Tests/SoftwareTest.Tests.csproj
+++ b/SoftwareTest.Tests/SoftwareTest.Tests.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TriangleTester.cs" />
     <Compile Include="LinkedListTester.cs" />
+    <Compile Include="PrimeFactorTester.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SoftwareTest\SoftwareTest.csproj">
