--- a/SoftwareTest/SoftwareTest.csproj
+++ b/SoftwareTest/SoftwareTest.csproj
@@ -121,9 +121,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Helpers\LinkedList.cs" />
+    <Compile Include="Extensions\LinkedList.cs" />
     <Compile Include="Helpers\LinkedListHelper.cs" />
-    <Compile Include="Helpers\Node.cs" />
+    <Compile Include="Extensions\Node.cs" />
     <Compile Include="Helpers\PrimeFactorHelper.cs" />
     <Compile Include="Helpers\TriangleHelper.cs" />
     <Compile Include="Models\Dtos\PrimeFactorDto.cs" />
